--- a/year/2015.md
+++ b/year/2015.md
@@ -1,5 +1,6 @@
 # Daftar Tugas Tahun Ajaran 2015
 
 - [Tugas pengenalan properties & event](https://classroom.github.com/assignment-invitations/355815782cabec3c52f5241d80efa16b)
-- [Tugas Variabel, Tipe Data dan Percabangan] (https://classroom.github.com/assignment-invitations/4945ca344242491e7a7ba13d19771f67)
+- [Tugas Variabel, Tipe Data dan Percabangan](https://classroom.github.com/assignment-invitations/4945ca344242491e7a7ba13d19771f67)
+- [Tugas Perulangan](https://classroom.github.com/assignment-invitations/7f6096fa2aa40a2cdcbefe6f2fd341c3)
 
